syntax = "proto3";

package controller.api.resources.targets.v1;

option go_package = "github.com/hashicorp/boundary/internal/gen/controller/api/resources/targets;targets";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/struct.proto";
import "controller/api/resources/scopes/v1/scope.proto";
import "controller/custom_options/v1/options.proto";

message HostSet{
	string id = 10;
	string host_catalog_id = 20;
}

// Target contains all fields related to a Target resource
message Target {
	// The ID of the resource
	// Output only.
	string id = 10;

	// Scope information for this resource
	// Output only.
	resources.scopes.v1.ScopeInfo scope = 20;
	
	// Optional name for identification purposes
	google.protobuf.StringValue name = 30 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = {this:"name" that: "name"}];

	// Optional user-set description for identification purposes
	google.protobuf.StringValue description = 40 [(custom_options.v1.generate_sdk_option) = true, (custom_options.v1.mask_mapping) = {this:"description" that: "description"}];

	// The time this resource was created
	// Output only.
	google.protobuf.Timestamp created_time = 50 [json_name="created_time"];

	// The time this resource was last updated.
	// Output only.
	google.protobuf.Timestamp updated_time = 60 [json_name="updated_time"];

	// The version can be used in subsequent write requests to ensure this
	// resource has not changed and to fail the write if it has.
	uint32 version = 70;

	string type = 80;

	// The ids of the host sets that make up this target.
	repeated string host_set_ids = 90;

	// The host sets that make up this target.
	// Output only.
	repeated HostSet host_sets = 100;

	google.protobuf.Struct attributes = 110 [(custom_options.v1.generate_sdk_option) = true];
}

message TCPTargetAttributes {
	uint32 default_port = 10;
}
